CNCS Dev 12/src/objects/NOFA__c.object
<CustomObject>
    <description>This is the first tab in the CNCS app</description>
    <fields>
        <fullName>Allow_Application_Package__c</fullName>
        <label>Allow Application Package</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Allow_Concept_Paper__c</fullName>
        <label>Allow Concept Paper</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Allow_planning_grants_for_this_NOFA__c</fullName>
        <label>Allow planning grants for this NOFA</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Anticipated_num_of_FTEs__c</fullName>
        <inlineHelpText>Full Time Employee</inlineHelpText>
        <label>Anticipated Number of FTEs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Application_Due11111__c</fullName>
        <label>Application Due1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Application_Due1111__c</fullName>
        <label>Application Due1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Application_Due111__c</fullName>
        <label>Application Due1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Application_Package1__c</fullName>
        <label>Application Package</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Application_Package__c</fullName>
        <label>Application Package</label>
        <picklist>
            <picklistValues>
                <fullName>--None--</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Americorps NCCC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Americorps Vista</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Application_Submission_Instructions__c</fullName>
        <label>Application Submission Instructions</label>
        <length>2000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Applications_due_date__c</fullName>
        <label>Applications Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Review-In-Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approver1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver1</label>
        <referenceTo>Test_User__c</referenceTo>
        <relationshipName>Planning</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver2</label>
        <referenceTo>Test_User__c</referenceTo>
        <relationshipName>Planning1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver3</label>
        <referenceTo>Test_User__c</referenceTo>
        <relationshipName>Planning2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Board_approval_date__c</fullName>
        <label>Board Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CFDA_Name__c</fullName>
        <formula>CFDA_Number__r.CFDA_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CFDA Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CFDA_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CFDA Number</label>
        <referenceTo>CFDA_number__c</referenceTo>
        <relationshipName>Planning</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Check_this_if_competitive_sub_applicatio__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Check if competitive sub application</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Check_this_if_fixed_price_NOFA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Check this if fixed price NOFA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Competitive_Sub_Applications__c</fullName>
        <label>Competitive Sub Applications</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Complete__c</fullName>
        <label>Complete?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Concept_Paper_Due_Date11111__c</fullName>
        <label>Concept Paper Due Date1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Concept_Paper_Due_Date1111__c</fullName>
        <label>Concept Paper Due Date1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Concept_Paper_Due_Date111__c</fullName>
        <label>Concept Paper Due Date1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Concept_Paper_Package1__c</fullName>
        <label>Concept Paper Package</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Concept_Paper_Package__c</fullName>
        <label>Concept Paper Package</label>
        <picklist>
            <controllingField>Allow_Concept_Paper__c</controllingField>
            <picklistValues>
                <fullName>Americorps NCCC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Americorps VISTA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Concept_Paper_Submission_Instructions__c</fullName>
        <label>Concept Paper Submission Instructions</label>
        <length>2000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Corp_prog_name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Corporate Program Name</label>
        <referenceTo>Corporate_Program1__c</referenceTo>
        <relationshipName>Planning</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Corporate_Program_Code__c</fullName>
        <formula>Corp_prog_name__r.Corp_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Corporate Program Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>2000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Different_from_Organization_address__c</fullName>
        <label>Different from Organization address?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <label>Document Type</label>
        <picklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Est_Total_funds_Available__c</fullName>
        <label>Estimated Total Funds Available</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Est_num_Grants_to_be_Awarded__c</fullName>
        <label>Estimated Number of Grants to be Awarded</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Excl_from_mon_Universe__c</fullName>
        <label>Exclude from Monitoring Universe</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Executive_officer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Executive Officer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Planning1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fiscal_Yr__c</fullName>
        <label>Fiscal Yr</label>
        <picklist>
            <picklistValues>
                <fullName>2002</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2003</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2004</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2005</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2006</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2007</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2008</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2009</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2019</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2020</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fixed_price_NOFA__c</fullName>
        <label>Fixed price NOFA</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Funding_cap_per_Applicant__c</fullName>
        <label>Funding cap per Applicant</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Grant_Purpose__c</fullName>
        <label>Grant Purpose</label>
        <length>2000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>If_No_Please_Mention_the_address__c</fullName>
        <label>If No,Please Mention the address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_Yes_how_many_members__c</fullName>
        <label>If Yes, How many members?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Issuing_Officer__c</fullName>
        <label>Issuing Office</label>
        <picklist>
            <picklistValues>
                <fullName>HQ(Office of Grants Management)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Center</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Legacy_NOFA_ID__c</fullName>
        <label>Legacy NOFA ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NOFA_RFP_Summary__c</fullName>
        <label>NOFA/RFP Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NOFA_Status__c</fullName>
        <label>NOFA Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NOFA_Summary__c</fullName>
        <label>NOFA Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NOFA_Type__c</fullName>
        <label>NOFA Type</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Continuation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PNS Amendments</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NOFA_name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_of_documents__c</fullName>
        <label>Number of Documents</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notice_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Notice ID</label>
        <referenceTo>Notice__c</referenceTo>
        <relationshipName>NOFAs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Peer_Review_End_Date__c</fullName>
        <label>Peer Review End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Peer_Review_Start_Date__c</fullName>
        <label>Peer Review Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phone_EO__c</fullName>
        <formula>Executive_officer__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_POC__c</fullName>
        <formula>Point_of_contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Planning__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Planning</label>
        <referenceTo>Planning__c</referenceTo>
        <relationshipName>NOFAs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Point_of_contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Point of contact</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Planning</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Dates1__c</fullName>
        <label>Project Start Dates1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Dates2__c</fullName>
        <label>Project Start Dates2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Dates3__c</fullName>
        <label>Project Start Dates3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_End_Date11111__c</fullName>
        <label>Project End Date1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_End_Date1111__c</fullName>
        <label>Project End Date1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_End_Date111__c</fullName>
        <label>Project End Date1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Start_Date11111__c</fullName>
        <label>Project Start Date1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Start_Date1111__c</fullName>
        <label>Project Start Date1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Start_Date111__c</fullName>
        <label>Project Start Date1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RFP_Status__c</fullName>
        <label>RFP Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RFP_Summary__c</fullName>
        <label>RFP Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Region1__c</fullName>
        <label>Region</label>
        <picklist>
            <controllingField>State__c</controllingField>
            <picklistValues>
                <fullName>Atlantic Region: Baltimore, Maryland</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>North Central Region: Vinton, Iowa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pacific Region: Sacramento, California</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southern Region: Vicksburg, Mississippi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National HeadQuarters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southwest Region</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Review_Type__c</fullName>
        <label>Review Type</label>
        <picklist>
            <picklistValues>
                <fullName>Field Staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HQ Staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Peer and Staff</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Round__c</fullName>
        <label>Round</label>
        <picklist>
            <controllingField>Region1__c</controllingField>
            <picklistValues>
                <fullName>Round1 : March 11 - April 23,2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Round 2 : April 30 - June 11, 2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Round 3: June 29 - Sept 16,2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Round 4: Sept 23 - November 6,2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Round 1: Nov 7 - Dec 18, 2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Round 2: Jan 14 - March 20, 2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Round 3: March 31 - May 22, 2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Round 4: Jun 2 - July 15, 2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Round 1: March 5 - May 14, 2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Round 2: Jun 2 - Aug 27, 2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Round 3: Sept 15 - Nov 12, 2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Round 1: Feb 20 - May 1, 2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Round 2: May 15 - July 2, 2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Round 3: July 20 - Sept 4, 2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Round 4: Sept 15 - Nov 5, 2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Round 1: Nov 1 - Dec 14, 2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Round 2: Jan 8 - April 9, 2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Round 3: April 23 - Jul 15, 2015</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Service_Address1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Address</label>
        <referenceTo>Service_Address__c</referenceTo>
        <relationshipLabel>NOFAs/RFPs</relationshipLabel>
        <relationshipName>NOFAs_RFPs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Stream_Code__c</fullName>
        <formula>Corp_prog_name__r.Layer_2_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Stream</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Stream__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Stream</label>
        <referenceTo>Corporate_Program1__c</referenceTo>
        <relationshipLabel>NOFAs/RFPs (Service Stream)</relationshipLabel>
        <relationshipName>NOFAs_RFPs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>CT</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USVI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NV</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Review-In-Progress</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In-Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finalized</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Published</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Term_of_acceptance__c</fullName>
        <label>Term Of Acceptance</label>
        <length>2000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Use_bands_on_review_consensus__c</fullName>
        <label>Use bands on review consensus</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Use_consensus_scores__c</fullName>
        <label>Use consensus scores</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>NOFA/RFP</label>
    <listViews>
        <fullName>Active_NOFAs</fullName>
        <columns>NAME</columns>
        <columns>NOFA_name__c</columns>
        <columns>Corp_prog_name__c</columns>
        <columns>Allow_Concept_Paper__c</columns>
        <columns>Concept_Paper_Due_Date__c</columns>
        <columns>Applications_due_date__c</columns>
        <columns>NOFA_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NOFA_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>Active NOFAs</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>NOFA_name__c</columns>
        <columns>Corp_prog_name__c</columns>
        <columns>Status__c</columns>
        <columns>Concept_Paper_Due_Date__c</columns>
        <columns>Applications_due_date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_NOFAs</fullName>
        <columns>NAME</columns>
        <columns>NOFA_name__c</columns>
        <columns>Corp_prog_name__c</columns>
        <columns>Allow_Concept_Paper__c</columns>
        <columns>Concept_Paper_Due_Date__c</columns>
        <columns>NOFA_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All NOFAs</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NOFAs/RFPs</pluralLabel>
    <recordTypes>
        <fullName>Action_Reports</fullName>
        <active>false</active>
        <label>Action Reports</label>
    </recordTypes>
    <recordTypes>
        <fullName>Comments</fullName>
        <active>false</active>
        <label>Comments</label>
    </recordTypes>
    <recordTypes>
        <fullName>Funding_Source</fullName>
        <active>false</active>
        <label>Funding Source</label>
    </recordTypes>
    <recordTypes>
        <fullName>Funding_Type</fullName>
        <active>false</active>
        <label>Funding Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Logic_Model</fullName>
        <active>false</active>
        <label>Logic Model</label>
    </recordTypes>
    <recordTypes>
        <fullName>NOFA</fullName>
        <active>true</active>
        <label>NOFA</label>
    </recordTypes>
    <recordTypes>
        <fullName>NOFA_Application</fullName>
        <active>true</active>
        <label>NOFA Application</label>
    </recordTypes>
    <recordTypes>
        <fullName>NOFA_Concept_Paper</fullName>
        <active>true</active>
        <label>NOFA Concept Paper</label>
    </recordTypes>
    <recordTypes>
        <fullName>Program_Info</fullName>
        <active>false</active>
        <label>Program Info</label>
    </recordTypes>
    <recordTypes>
        <fullName>RFP</fullName>
        <active>true</active>
        <label>RFP</label>
    </recordTypes>
    <recordTypes>
        <fullName>Round</fullName>
        <active>true</active>
        <label>Round</label>
    </recordTypes>
    <recordTypes>
        <fullName>Service_Address</fullName>
        <active>true</active>
        <label>Service Address</label>
    </recordTypes>
    <recordTypes>
        <fullName>test</fullName>
        <active>false</active>
        <label>test</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Application_Due_Date</fullName>
        <active>true</active>
        <errorConditionFormula>Applications_due_date__c  &lt;  TODAY()</errorConditionFormula>
        <errorMessage>Sorry, You cannot Submit the application as the due date is passed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Concept_Paper_Due_Date</fullName>
        <active>true</active>
        <errorConditionFormula>Concept_Paper_Due_Date__c  &lt; Today()</errorConditionFormula>
        <errorMessage>Sorry, You cannot Submit the concept paper as the due date is passed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Concept_Paper_is_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(   Allow_Concept_Paper__c   , &apos;yes&apos;), ISBLANK(   Concept_Paper_Due_Date__c   ))</errorConditionFormula>
        <errorDisplayField>Concept_Paper_Due_Date__c</errorDisplayField>
        <errorMessage>Field must be entered when &quot;Allow Concept Paper&quot; is &apos;Yes&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Date_should_be_Future</fullName>
        <active>true</active>
        <errorConditionFormula>Applications_due_date__c &lt;= TODAY()</errorConditionFormula>
        <errorDisplayField>Applications_due_date__c</errorDisplayField>
        <errorMessage>Select the Future Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Greater_Than_or_Equal_to_current_date</fullName>
        <active>true</active>
        <errorConditionFormula>Peer_Review_Start_Date__c  &lt;=   TODAY()</errorConditionFormula>
        <errorDisplayField>Peer_Review_Start_Date__c</errorDisplayField>
        <errorMessage>Should be greater than or equal to current date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Peer_Review_End_Date</fullName>
        <active>true</active>
        <errorConditionFormula>Peer_Review_End_Date__c  &lt;= TODAY()</errorConditionFormula>
        <errorDisplayField>Peer_Review_End_Date__c</errorDisplayField>
        <errorMessage>Should be greater than or equal to current date</errorMessage>
    </validationRules>
</CustomObject>